# pTock

./: README.md  font.py  mechanism.py  ptock  ptock.py  ptock_display.py  ptock_time.py  pyproject.toml  setup.py  view.py
src/ptock/: main.py  view.py
